--- a/forms/brand_form.html
+++ b/forms/brand_form.html
@@ -7,12 +7,23 @@
 
 <body>
     <form action="#">
-        <label for="brandID">รหัสยี่ห้อ</label>
-        <input type="number" id="brandID" name="brandID">  <!-- auto generate -->
-        <br><br>
-        <label for="brandName">ชื่อยี่ห้อ</label>
-        <input type="text" id="brandName" name="brandName">
-        <br><br>
+        <div class="detailInfo">
+            <table>
+                <tr>
+                    <td>รหัสยี่ห้อ</td>
+                    <td>
+                        <!-- auto generate -->
+                        <input type="number" id="brandID" name="brandID">
+                    </td>
+                </tr>
+                <tr>
+                    <td>ชื่อยี่ห้อ</td>
+                    <td>
+                        <input type="text" id="brandName" name="brandName">
+                    </td>
+                </tr>
+            </table>
+        </div>
         <input class="submit-btn" type="submit" value="บันทึกข้อมูล">
     </form>
 </body>
