--- a/forms/staff_form.html
+++ b/forms/staff_form.html
@@ -7,52 +7,101 @@
 
 <body>
     <form action="#">
-        <label for="staffID">รหัสลูกค้า</label>
-        <input type="number" id="staffID" name="staffID">  <!-- auto generate -->
-        <br><br>
-        <p>ตำแหน่ง</p>
-        <input type="radio" id="staffPosition" name="staffPosition">
-        <label for="staffPosition">เสมียน</label>
-        <br>
-        <input type="radio" id="staffPosition" name="staffPosition">
-        <label for="staffPosition">พนักงานขาย</label>
-        <br>
-        <input type="radio" id="staffPosition" name="staffPosition">
-        <label for="staffPosition">พนักงานจัดส่ง</label>
-        <br>
-        <input type="radio" id="staffPosition" name="staffPosition">
-        <label for="staffPosition">ช่าง</label>
-        <br><br>
+        <div class="row">
+            <div class="detailInfo">
+                <table>
+                    <tr>
+                        <td>รหัสพนักงาน</td>
+                        <td>
+                            <!-- auto generate -->
+                            <input type="number" id="staffID" name="staffID">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>ชื่อ</td>
+                        <td>
+                            <input type="text" id="staffName" name="staffName">
+                        </td>
+                        <td>นามสกุล</td>
+                        <td>
+                            <input type="text" id="staffLastName" name="staffLastName">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>หมายเลขโทรศัพท์มือถือ</td>
+                        <td>
+                            <input type="text" id="staffTel" name="staffTel">
+                        </td>
+                        <td>เลขบัตรประจำตัวประชาชน</td>
+                        <td>
+                            <input type="text" id="IDCardNumber" name="IDCardNumber">
+                        </td>
 
-        <label for="staffName">ชื่อ</label>
-        <input type="text" id="staffName" name="staffName">
-        <label for="staffLastName">นามสกุล</label>
-        <input type="text" id="staffLastName" name="staffLastName">
-        <br><br>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">ที่อยู่</td>
+                        <td colspan="4">
+                            <textarea id="staffAddress" name="staffAddress"
+                                placeholder="บ้านเลขที่ หมู่บ้าน ถนน"></textarea>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="4">
+                            <table>
+                                <tr>
+                                    <td>
+                                        <input id="input_zipcode" class="zipcode-field" placeholder="รหัสไปรษณีย์" />
+                                    </td>
+                                    <td>
+                                        <select class="dropdown-field" id="input_province" onchange="showAmphoes()">
+                                            <option value="">กรุณาเลือกจังหวัด</option>
+                                        </select>
+                                    </td>
+                                    <td>
+                                        <select class="dropdown-field" id="input_amphoe" onchange="showDistricts()">
+                                            <option value="">กรุณาเลือกอำเภอ</option>
+                                        </select>
+                                    </td>
+                                    <td>
+                                        <select class="dropdown-field" id="input_district" onchange="showZipcode()">
+                                            <option value="">กรุณาเลือกตำบล</option>
+                                        </select>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
 
-        <label for="IDCardNumber">เลขบัตรประจำตัวประชาชน</label>
-        <input type="text" id="IDCardNumber" name="IDCardNumber">
-        <br><br>
-
-        <p>ที่อยู่</p>
-        <textarea id="customerAddress" name="customerAddress" placeholder="บ้านเลขที่ หมู่บ้าน ถนน"></textarea>
-        <br>
-        <input id="input_zipcode" placeholder="รหัสไปรษณีย์" />
-        <select id="input_province" onchange="showAmphoes()">
-            <option value="">กรุณาเลือกจังหวัด</option>
-        </select>
-        <select id="input_amphoe" onchange="showDistricts()">
-            <option value="">กรุณาเลือกอำเภอ</option>
-        </select>
-        <select id="input_district" onchange="showZipcode()">
-            <option value="">กรุณาเลือกตำบล</option>
-        </select>
-        <br><br>
-        
-        <label for="staffTel">หมายเลขโทรศัพท์</label>
-        <input type="text" id="staffTel" name="staffTel">
-        <br><br>
-
+                    <tr>
+                        <td rowspan="5">ตำแหน่ง</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="radio" id="staffPosition" name="staffPosition">
+                            <label for="staffPosition">เสมียน</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="radio" id="staffPosition" name="staffPosition">
+                            <label for="staffPosition">พนักงานขาย</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="radio" id="staffPosition" name="staffPosition">
+                            <label for="staffPosition">พนักงานจัดส่ง</label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="radio" id="staffPosition" name="staffPosition">
+                            <label for="staffPosition">ช่าง</label>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
         <input class="submit-btn" type="submit" value="บันทึกข้อมูล">
     </form>
 </body>
