Add import button

--- a/info_page.html
+++ b/info_page.html
@@ -20,6 +20,9 @@
                 <input type="submit" value="ค้นหา">
             </form>
         </div>
+        <div class="import-button" id="importButton">
+            <button>รับสินค้าเข้า</button>
+        </div>
         <div class="add-button" id="addButton">
             <button>เพิ่มรายการใหม่</button>
         </div>
