--- a/forms/import_form.html
+++ b/forms/import_form.html
@@ -13,19 +13,19 @@
                     <td>เลขที่เอกสาร</td>
                     <td>
                         <!-- auto generate -->
-                        <input type="number" id="spDocID" name="spDocID">
+                        <input type="number" id="importDocID" name="importDocID">
                     </td>
                 </tr>
                 <tr>
                     <td>วันที่เอกสาร</td>
                     <td>
-                        <input type="datetime" id="spDocDate" name="spDocDate">
+                        <input type="datetime" id="importDocDate" name="importDocDate">
                     </td>
                 </tr>
                 <tr>
-                    <td>ผู้จัดจำหน่ายอะไหล่</td>
+                    <td>ผู้จัดจำหน่าย</td>
                     <td>
-                        <input type="text" id="spSupplier" name="spSupplier">
+                        <input type="text" id="importSupplier" name="importSupplier">
                     </td>
                 </tr>
             </div>
@@ -34,35 +34,35 @@
             <div class="inventoryInfo">
                 <table>
                     <tr>
-                        <th>รหัสอะไหล่</th>
-                        <th>ชื่ออะไหล่</th>
-                        <th>อะไหล่สำหรับ</th>
+                        <th>รหัส</th>
+                        <th>ชื่อ</th>
+                        <th>สำหรับ</th>
                         <th>จำนวน</th>
-                        <th>ราคาทุนอะไหล่</th>
-                        <th>รวมราคาทุนอะไหล่</th>
+                        <th>ราคาทุน</th>
+                        <th>รวมราคาทุน</th>
                     </tr>
                     <tr>
                         <td>
                             <!-- auto generate -->
-                            <input type="number" id="spID" name="spID">
+                            <input type="number" id="importID" name="importID">
                         </td>
                         <td>
-                            <!-- display only -->
-                            <input type="text" id="spName" name="spName">
+                            <!-- diimportlay only -->
+                            <input type="text" id="importName" name="importName">
                         </td>
                         <td>
-                            <!-- display only -->
-                            <input type="text" id="spFor" name="spFor">
+                            <!-- diimportlay only -->
+                            <input type="text" id="importFor" name="importFor">
                         </td>
                         <td>
-                            <input type="number" id="spQty" name="spQty">
+                            <input type="number" id="importQty" name="importQty">
                         </td>
                         <td>
-                            <input type="text" id="spCost" name="spCost">
+                            <input type="text" id="importCost" name="importCost">
                         </td>
                         <td>
                             <!-- cost*qty -->
-                            <input type="text" id="spCost" name="spCost">
+                            <input type="text" id="importCost" name="importTotalCost">
                         </td>
                     </tr>
                 </table>
