--- a/forms/sp_form.html
+++ b/forms/sp_form.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <h1 id="pageHeader">รายการอะไหล่</h1>
     <form action="#">
         <div class="detailInfo">
             <table>
@@ -21,29 +22,15 @@
                     <td>
                         <input type="text" id="spName" name="spName">
                     </td>
-                </tr>
-                <tr>
-                    <td>อะไหล่สำหรับ</td>
-                    <td>
-                        <input type="text" id="spFor" name="spFor">
-                    </td>
-                </tr>
-                <tr>
-                    <td>ต้นทุนอะไหล่</td>
-                    <td>
-                        <input type="text" id="spCost" name="spCost">
-                    </td>
-                </tr>
-                <tr>
                     <td>ราคาอะไหล่</td>
                     <td>
                         <input type="text" id="spPrice" name="spPrice">
                     </td>
                 </tr>
                 <tr>
-                    <td>ผู้จัดจำหน่ายอะไหล่</td>
-                    <td>
-                        <input type="text" id="spSupplier" name="spSupplier">
+                    <td>อะไหล่สำหรับ</td>
+                    <td colspan="3">
+                        <textarea id="spFor" name="spFor"></textarea>
                     </td>
                 </tr>
             </table>
