--- a/forms/supplier_form.html
+++ b/forms/supplier_form.html
@@ -39,8 +39,8 @@
                     <tr>
                         <!-- enable for niti -->
                         <td>ชื่อบริษัท/สถานประกอบการ</td>
-                        <td>
-                            <input type="text" id="companyName" name="companyName">
+                        <td colspan="3">
+                            <input type="text" class="long-name" id="companyName" name="companyName">
                         </td>
                     </tr>
                     <tr>
