add showModal function and logic to customerSearchButton in import page

--- a/forms/delivery_form.html
+++ b/forms/delivery_form.html
@@ -112,7 +112,7 @@
                         </td>
                         <td>
                             <!-- pop up modal form when search -->
-                            <input class="btn" type="submit" value="ค้นหาลูกค้า">
+                            <input class="btn" type="submit" value="ค้นหาลูกค้า" id="customerSearchButton">
                             <!-- The Modal -->
                             <div id="searchModal" class="modal">
                                 <div class="modal-content">
