--- a/forms/installation_wh_form.html
+++ b/forms/installation_wh_form.html
@@ -9,6 +9,42 @@
     <h1 id="pageHeader">ข้อมูลการติดตั้ง เครื่องทำน้ำอุ่น</h1>
     <form action="#">
         <div class="row">
+            <div class="installing-type">
+                <table>
+                    <tr>
+                        <td>
+                            <input type="radio" id="partnerType" name="partnerType" value="whSet">
+                            <label for="partnerType">ติดตั้งใหม่</label>
+                        </td>
+                        <td>
+                            <input type="radio" id="partnerType" name="partnerType" value="whFix">
+                            <label for="partnerType">แก้ไขและซ่อมแซม</label>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div class="row">
+            <div class="ref-id">
+                <table>
+                    <tr>
+                        <td>
+                            <span>อ้างอิงงานติดตั้งเก่า</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>เลขที่ใบงานติดตั้ง</td>
+                        <td>
+                            <input type="number" id="refJobID" name="refJobID">
+                        </td>
+                        <td>
+                            <button class="showRef-btn" id="showRefButton">แสดงข้อมูล</button>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div class="row">
             <div class="column">
                 <div class="purchaseInfo">
                     <p>ข้อมูลการซื้อ</p>
@@ -62,9 +98,9 @@
                     <p>การนัดหมาย</p>
                     <table>
                         <tr>
-                            <td>เลขที่ใบจัดส่ง</td>
+                            <td>เลขที่ใบงานติดตั้ง</td>
                             <td>
-                                <input type="number" id="deliveryJobID" name="deliveryJobID"> <!-- auto generate -->
+                                <input type="text" id="installJobID" name="installJobID"> <!-- auto generate -->
                             </td>
                         </tr>
                         <tr>
@@ -114,11 +150,12 @@
                         </td>
                         <td>
                             <!-- pop up modal form when search -->
-                            <input class="btn" type="submit" value="ค้นหาลูกค้า">
+                            <input class="btn" type="submit" value="ค้นหาลูกค้า" id="customerSearchButton">
                             <!-- The Modal -->
                             <div id="searchModal" class="modal">
                                 <div class="modal-content">
                                     <!-- searching by id, name, phone number  -->
+                                    <span class="close">&times;</span>
                                     <table>
                                         <tr>
                                             <td>
@@ -192,7 +229,9 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" class="table-field" id="productName" name="productName">
+                            <select class="dropdown-field-sat" id="productName" name="productName">
+                                <option value="whSet">เครื่องทำน้ำอุ่น</option>
+                            </select>
                         </td>
                         <td>
                             <select id="productBrand" class="dropdown-field" name="productBrand">
