Add close button to modal

--- a/forms/delivery_form.html
+++ b/forms/delivery_form.html
@@ -117,6 +117,7 @@
                             <div id="searchModal" class="modal">
                                 <div class="modal-content">
                                     <!-- searching by id, name, phone number  -->
+                                    <span class="close">&times;</span>
                                     <table>
                                         <tr>
                                             <td>
