make pagination work properly

--- a/info_page.html
+++ b/info_page.html
@@ -48,12 +48,8 @@
         </table>
     </div>
     <div class="page-center">
-        <div class="pagination">
-            <a href="#" class="previous">&laquo;</a>
-            <a href="#" class="p1">1</a>
-            <a href="#" class="p2">2</a>
-            <a href="#" class="p3">3</a>
-            <a href="#" class="next">&raquo;</a>
+        <div class="pagination" id="pagination" >
+            <!-- js pagination in home.js -->
         </div>
     </div>
     </div>
