--- a/home.html
+++ b/home.html
@@ -208,5 +208,6 @@
         require('./home.js');
     </script>
 </body>
-
+<link rel="stylesheet" type="text/css" href="node_modules/jquery-datetimepicker/jquery.datetimepicker.css"/>
+<script src="node_modules/jquery-datetimepicker/build/jquery.datetimepicker.full.min.js"></script>
 </html>
