Resize form and info page due to larger display

--- a/forms/repairing_form.html
+++ b/forms/repairing_form.html
@@ -23,7 +23,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td style="font-size: 11pt;">วันที่หมดอายุการรับประกัน : </td>
+                            <td style="font-size: 11pt;">วันที่หมดอายุการรับประกัน: </td>
                             <td>
                                 <input type="datetime" id="warrantyDate" name="warrantyDate">
                             </td>
@@ -80,7 +80,7 @@
                         <tr>
                             <td>วันที่-เวลา รับเครื่อง</td>
                             <td>
-                                <input type="datetime" id="appointmentDate" name="appointmentDate">
+                                <input type="datetime" id="jobReceiveDate" name="jobReceiveDate">
                             </td>
                         </tr>
                         <!-- enable if need pick up -->
