try adding search method in Table class

--- a/info_page.html
+++ b/info_page.html
@@ -13,7 +13,7 @@
         <div class="search-box">
             <form action="#">
                 <select id="searchDropdown" name="searchDropdown">
-                    <option value="field">Field</option>
+                    <option value="any">ทั้งหมด</option>
                     <!-- option from database fields -->
                 </select>
                 <input type="search" id="searchField" name="searchField">
