add search feature to infoTable

--- a/info_page.html
+++ b/info_page.html
@@ -17,7 +17,7 @@
                     <!-- option from database fields -->
                 </select>
                 <input type="search" id="searchField" name="searchField">
-                <input type="submit" value="ค้นหา">
+                <input type="submit" id="searchSubmit" value="ค้นหา">
             </form>
         </div>
         <div class="import-button" id="importButton">
